Fixed handling of URLs without a specified port